--- a/style.css
+++ b/style.css
@@ -1,75 +1,50 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-size: 18px;
+  color: white;
+  font-family: Arial;
+}
+
 body {
-font-family: 'Lato', sans-serif;
-font-family: 'Open Sans', sans-serif;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #B86DBC;
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: #a801b3;
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+    float: left;
+  margin-left: -600px;
+    margin-top: 570px;
+}
+
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.btn {
+  background-color: #5c0762;
+  border: 1px solid hsl(296, 87%, 21%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: white;
+  outline: none;
+}
+
+.btn:hover {
+  border-color: rgba(0,0,0,.5);
 }
 
 
-
-#quiz {
-	margin-left: 10px;
-	background: #FFFB00;
-	padding: 10px 20px 10px 20px;
-	width: 400px;
-	border-radius: 20px;
-	float: left;
-
-}
-
-input {
-	margin-bottom: 20px;
-	display: block;
-}
-
-#textbox {
-	height: 25px;
-	font-size: 16px;
-	border-radius: 5px;
-	border: none;
-	padding-left: 5px;
-}
-
-
-#button {
-	background: red;
-	border: none;
-	border-radius: 5px;
-	padding: 10px;
-	color: white;
-	font-size: 16px;
-	transition-duration: .5s;
-	margin-top: 15px;
-}
-
-
-
-#button:hover {
-	background: white;
-	border: 1px solid red;
-	color: black;
-	cursor: pointer;
-
-}
-
-#after_Alldone {
-	visibility: hidden;
-	background: #FEC73F;
-	padding: 10px 20px 10px 20px;
-	width: 400px;
-	border-radius: 20px;
-	float: left;
-	margin-left: 20px;
-	font-size: 30px;
-
-
-}
-
-#picture {
-	width: 375px;
-	height: 245px;
-}
-
-
-
-#mc {
-	display: inline;
-} 
