--- a/addstyle.css
+++ b/addstyle.css
@@ -1,69 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8"> 
-<meta name="viewport" content="width=device-width,
-initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="addstyle.css" rel="stylesheet">
-<script defer src="game.js"></script>
-<title>THE BED</title> 
-</head> 
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-size: 18px;
+  color: white;
+  font-family: Arial;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #B86DBC;
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: #a801b3;
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+    float: left;
+  margin-left: -600px;
+    margin-top: 570px;
+}
+
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.btn {
+  background-color: #5c0762;
+  border: 1px solid hsl(296, 87%, 21%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: white;
+  outline: none;
+}
+
+.btn:hover {
+  border-color: rgba(0,0,0,.5);
+}
 
 
-<body>
-  <div class="container">
-<div id="text">Text</div>
-    <div id="option-buttons" class="btn-grid">
-      <button class="btn">Option 1</button>
-      <button class="btn">Option 2</button>
-      <button class="btn">Option 3</button>
-      <button class="btn">Option 4</button>
-    </div>
-</div>
-
-
-  	<div id="scene">
-  </div>
-
-
-    <div id="restart">
-      <a href="click_start.html"> Return to Start </a>
-  </div>
-
-
-  <style>
-
-a{
-      color: white;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-
-  
-  #scene {
-			background: url("bed-01.jpg") no-repeat;
-			height: 600px;
-			width: 1065px;
-
-			position: absolute;
-			top: 20px;
-			left: 20px;
-
-		}
-
-    #restart {
-  position: absolute;
-      top: 30px;
-      left: 50px;
-
-
-    }
-
-  </style>
-</body>
-</html>
